# pyaerocom-parallelization

./: .pre-commit-config.yaml  README.md  install.md  pyproject.toml
.github/workflows/: CI.yml
src/aeroval_parallelize/: __init__.py  aeroval_parallelise.py  cache_tools.py  const.py  tools.py
src/aeroval_parallelize/cli/: aeroval_parallelise.py  aeroval_run_json_cfg.py  pyaerocom_cachegen.py
tests/testdata/: pyaro_test.picklejson
