[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaerocom-parallelization"
version = "0.0.1"
authors = [{ name = "MET Norway" }]
description = "run pyaerocom aeroval tasks in parallel on the Met Norway PPI infrastructure"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
requires-python = ">=3.8"

dependencies = [
    "pyaerocom",
    "typer>=0.4.0",
]

[project.urls]
"Homepage" = "https://github.com/metno/pyaerocom-parallelization"
"Bug Tracker" = "https://github.com/metno/pyaerocom-parallelization/issues"

