[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaerocom_parallelization"
version = "0.6.0"
authors = [{ name = "MET Norway" }]
description = "run pyaerocom aeroval tasks in parallel on the Met Norway PPI infrastructure"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
requires-python = ">=3.10"
dependencies = ["simplejson", "pyaerocom>=0.16.0", "jsonpickle"]

[project.urls]
"Homepage" = "https://github.com/metno/pyaerocom-parallelization"
"Bug Tracker" = "https://github.com/metno/pyaerocom-parallelization/issues"

[project.scripts]
aeroval_parallelize = "aeroval_parallelize.cli.aeroval_parallelise:main"
aeroval_run_json_cfg = "aeroval_parallelize.cli.aeroval_run_json_cfg:main"
pyaerocom_cachegen = "aeroval_parallelize.cli.pyaerocom_cachegen:main"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false
warn_unreachable = true
show_error_codes = true
pretty = true
sqlite_cache = true

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
skip_missing_interpreters = True
isolated_build = True

envlist =
    py311
    format

[testenv]
commands = python3 -m unittest discover -s tests

[testenv:format]
commands =
    pre-commit run --all-files --show-diff-on-failure
deps =
    pre-commit
"""
